--- a/src/assets/css/global.css
+++ b/src/assets/css/global.css
@@ -1,5 +1,12 @@
-html, body, #app {
+/* 公共样式文件 */
+html,
+body,
+#app {
     height: 100%;
     margin: 0;
     padding: 0;
+}
+
+.el-breadcrumb {
+    margin-bottom: 15px;
 }
