完成了商品分类添加功能

--- a/src/assets/css/global.css
+++ b/src/assets/css/global.css
@@ -20,3 +20,7 @@ body,
     overflow: hidden !important;
     background-color: #ebeef5 !important;
 }
+
+.el-cascader-panel {
+    height: 300px !important;
+}
