完成了商品列表功能

--- a/src/assets/css/global.css
+++ b/src/assets/css/global.css
@@ -12,6 +12,14 @@ body,
     margin-bottom: 15px;
 }
 
+.el-steps {
+    margin: 15px 0;
+}
+
+.el-step__title {
+    font-size: 13px;
+}
+
 /* .el-table__expand-column .cell {
     display: none !important;
 } */
@@ -23,4 +31,8 @@ body,
 
 .el-cascader-panel {
     height: 300px !important;
+}
+
+.ql-editor {
+    min-height: 250px;
 }
